--- a/action.yml
+++ b/action.yml
@@ -54,6 +54,12 @@ inputs:
       [Optional] create target branch if not exist. Defaults to `false`
     default: false
     required: false
+  clear-target-directory:
+    type: boolean
+    description: >-
+      [Optional] clear target directory before pushing. Defaults to `false`
+    default: false
+    required: false
 
 runs:
   using: docker
@@ -71,6 +77,7 @@ runs:
     - '${{ inputs.commit-message }}'
     - '${{ inputs.target-directory }}'
     - '${{ inputs.create-target-branch-if-needed }}'
+    - '${{ inputs.clear-target-directory }}'
 branding:
   icon: git-commit
   color: green
